--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ configurations {
 
 sourceSets {
     main { compileClasspath += configurations.provided }
+    test {
+        compileClasspath += configurations.provided
+        runtimeClasspath += configurations.provided
+    }
 }
 
 dependencies {
